<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".SpiritsExplainedActivity">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/red"
			android:minHeight="100dp"
			app:layout_constraintTop_toTopOf="parent" />
	<TextView android:id="@+id/spirits_explained_header"
			android:text="@string/txt_spirits_explained_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:fontFamily="sans-serif-medium"
			android:textColor="#FFFFFF"
			app:layout_constraintStart_toStartOf="@+id/toolbar"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/toolbar"
			app:layout_constraintBottom_toBottomOf="@+id/toolbar" />

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/toolbar"
			android:fillViewport="true">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:layout_marginBottom="65dp"
				app:layout_constraintTop_toBottomOf="parent">

			<androidx.constraintlayout.widget.Guideline
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/left_boundary"
					android:orientation="vertical"
					app:layout_constraintGuide_percent="0.05" />

			<androidx.constraintlayout.widget.Guideline
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/right_boundary"
					android:orientation="vertical"
					app:layout_constraintGuide_percent="0.95" />

			<Button android:id="@+id/btn_spirits_explained_brandy"
					android:text="@string/txt_spirits_explained_brandy"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />

			<TextView
					android:id="@+id/txt_spirits_explained_brandy_desc"
					android:text="@string/txt_spirits_explained_brandy_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_brandy"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/light_grey"
					android:textColor="@color/black"
					android:padding="30dp"
					android:textStyle="bold" />

			<Button android:id="@+id/btn_spirits_explained_cordials"
					android:text="@string/txt_spirits_explained_cordials"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_brandy_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_cordials_desc"
					android:text="@string/txt_spirits_explained_cordials_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_cordials"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />

			<Button android:id="@+id/btn_spirits_explained_gin"
					android:text="@string/txt_spirits_explained_gin"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_cordials_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_gin_desc"
					android:text="@string/txt_spirits_explained_gin_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_gin"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />

			<Button android:id="@+id/btn_spirits_explained_rum"
					android:text="@string/txt_spirits_explained_rum"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_gin_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingStart="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_rum_desc"
					android:text="@string/txt_spirits_explained_rum_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_rum"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />

			<Button android:id="@+id/btn_spirits_explained_tequila"
					android:text="@string/txt_spirits_explained_tequila"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_rum_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_tequila_desc"
					android:text="@string/txt_spirits_explained_tequila_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_tequila"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />

			<Button android:id="@+id/btn_spirits_explained_vodka"
					android:text="@string/txt_spirits_explained_vodka"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_tequila_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_vodka_desc"
					android:text="@string/txt_spirits_explained_vodka_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_vodka"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />

			<Button android:id="@+id/btn_spirits_explained_whiskey"
					android:text="@string/txt_spirits_explained_whiskey"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:textSize="30sp"
					android:layout_marginTop="40dp"
					android:background="@drawable/rounded_corner"
					app:layout_constraintTop_toBottomOf="@+id/txt_spirits_explained_vodka_desc"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:textAlignment="viewStart"
					android:paddingLeft="30dp" />
			<TextView android:id="@+id/txt_spirits_explained_whiskey_desc"
					android:text="@string/txt_spirits_explained_whiskey_desc"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					app:layout_constraintTop_toBottomOf="@id/btn_spirits_explained_whiskey"
					app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
					app:layout_constraintRight_toRightOf="@+id/right_boundary"
					android:fontFamily="casual"
					android:background="@color/dark_grey"
					android:textColor="#FFFFFF"
					android:padding="30dp" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>