<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".GeneralInfoActivity">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/red"
			android:minHeight="100dp"
			app:layout_constraintTop_toTopOf="parent" />

	<TextView
			android:id="@+id/general_info_header"
			android:text="@string/txt_general_info_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:fontFamily="sans-serif-medium"
			android:textColor="#FFFFFF"
			app:layout_constraintStart_toStartOf="@+id/toolbar"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/toolbar"
			app:layout_constraintBottom_toBottomOf="@+id/toolbar" />

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="120dp"
			app:layout_constraintTop_toBottomOf="@+id/toolbar">

		<androidx.constraintlayout.widget.Guideline
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/left_boundary"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.1" />

		<androidx.constraintlayout.widget.Guideline
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/right_boundary"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.9" />

		<Button
				android:id="@+id/btn_faq_spirits"
				android:text="@string/txt_general_info_faq_spirits"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_spirits_explained"
				android:text="@string/txt_general_info_spirits_explained"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_faq_spirits"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_party_planning"
				android:text="@string/txt_general_info_party_planning"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_spirits_explained"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_enjoy_responsibly"
				android:text="@string/txt_general_info_enjoy_responsibly"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_party_planning"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_credits"
				android:text="@string/txt_general_info_credits"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_enjoy_responsibly"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>