<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/red"
			android:minHeight="100dp"
			app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="120dp"
			app:layout_constraintTop_toBottomOf="@+id/toolbar">

		<androidx.constraintlayout.widget.Guideline
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/left_boundary"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.1" />

		<androidx.constraintlayout.widget.Guideline
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/right_boundary"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.9" />

		<Button
				android:id="@+id/btn_browse_drinks"
				android:text="@string/txt_home_browse_drinks"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_find_drink"
				android:text="@string/txt_home_find_drink"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_browse_drinks"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />

		<Button
				android:id="@+id/btn_info_faq"
				android:text="@string/txt_home_info_faq"
				android:layout_width="0dp"
				android:layout_height="100dp"
				android:textSize="30sp"
				android:layout_marginTop="40dp"
				android:background="@drawable/rounded_corner"
				app:layout_constraintTop_toBottomOf="@+id/btn_find_drink"
				app:layout_constraintLeft_toLeftOf="@+id/left_boundary"
				app:layout_constraintRight_toRightOf="@+id/right_boundary" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>